# find-a-plugin

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  macros.rs  main.rs  model.rs  version.rs
crates/cli/src/command/: search.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  search.rs
scripts/: Build-Wasm.ps1  get-crates.ps1
web/: components.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: date.ts  error.ts  intl.ts  utils.ts
web/src/lib/components/: external-link.svelte  footer.svelte  grid-card.svelte  grid.svelte  header.svelte  index.ts
web/src/lib/components/icons/: favorite.svelte  github.svelte
web/src/lib/stores/: bookmark.ts  index.ts  plugin.ts  search.ts
web/src/lib/types/: index.d.ts
web/src/routes/: +layout.svelte  +page.svelte
