[package]
name = "cli"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.repository]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
colored = "2.2"
http = "1.2"
itertools = "0.13"
regex = "1.11"
serde_json = "1.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["brotli", "deflate", "gzip", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.tokio]
version = "1.42"
features = ["full"]
