[package]
name = "wasm"
version = "0.1.0"
publish = false
description.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
smallvec = "1.13"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.web-sys]
version = "0.3"
features = ["Request", "Response", "Window"]
